feat:Implement basic map

--- a/src/main/webapp/app/map-display/map-display.component.html
+++ b/src/main/webapp/app/map-display/map-display.component.html
@@ -1,1 +1,13 @@
-<p>map-display works!</p>
+<head>
+  <link rel="stylesheet" href="map-display.component.scss" />
+</head>
+<div class="divContainer">
+  <div class="mapMenu">
+    <p>map menu goes here</p>
+  </div>
+  <div class="mapContainer">
+    <div class="mapBorder">
+      <div id="map"></div>
+    </div>
+  </div>
+</div>
