--- a/src/main/webapp/app/entities/app-user/update/app-user-update.component.html
+++ b/src/main/webapp/app/entities/app-user/update/app-user-update.component.html
@@ -14,6 +14,12 @@
         <div class="row mb-3">
           <label class="form-label" for="field_numRoutes">Num Routes</label>
           <input type="number" class="form-control" name="numRoutes" id="field_numRoutes" data-cy="numRoutes" formControlName="numRoutes" />
+          <div *ngIf="editForm.get('numRoutes')!.invalid && (editForm.get('numRoutes')!.dirty || editForm.get('numRoutes')!.touched)">
+            <small class="form-text text-danger" *ngIf="editForm.get('numRoutes')?.errors?.required"> This field is required. </small>
+            <small class="form-text text-danger" [hidden]="!editForm.get('numRoutes')?.errors?.number">
+              This field should be a number.
+            </small>
+          </div>
         </div>
 
         <div class="row mb-3">
@@ -26,6 +32,12 @@
             data-cy="numReviews"
             formControlName="numReviews"
           />
+          <div *ngIf="editForm.get('numReviews')!.invalid && (editForm.get('numReviews')!.dirty || editForm.get('numReviews')!.touched)">
+            <small class="form-text text-danger" *ngIf="editForm.get('numReviews')?.errors?.required"> This field is required. </small>
+            <small class="form-text text-danger" [hidden]="!editForm.get('numReviews')?.errors?.number">
+              This field should be a number.
+            </small>
+          </div>
         </div>
 
         <div class="row mb-3">
