--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -27,6 +27,14 @@
           </a>
         </li>
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+          <a class="nav-link" routerLink="/rating" (click)="collapseNavbar()">
+            <span>
+              <fa-icon icon="map"></fa-icon>
+              <span>Rating</span>
+            </span>
+          </a>
+        </li>
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <a class="nav-link" routerLink="/search" (click)="collapseNavbar()">
             <span>
               <fa-icon icon="magnifying-glass"></fa-icon>
