feat: add find location feature

--- a/src/main/webapp/app/map-display/map-display.component.html
+++ b/src/main/webapp/app/map-display/map-display.component.html
@@ -5,9 +5,9 @@
   <div class="mapMenuContainer">
     <h2>Route</h2>
     <form>
-      <input placeholder="Starting Location" type="text" id="startingLocation" />
-      <input placeholder="Destination" type="text" id="destination" />
-      <input type="submit" value="Submit" />
+      <input class="routeInput" placeholder="Starting Location" type="text" id="startingLocation" />
+      <input class="routeInput" placeholder="Destination" type="text" id="destination" />
+      <input class="routeInput" type="submit" value="Submit" />
     </form>
   </div>
 
