--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -26,7 +26,14 @@
             </span>
           </a>
         </li>
-
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+          <a class="nav-link" routerLink="/for-you" (click)="collapseNavbar()">
+            <span>
+              <fa-icon icon="map"></fa-icon>
+              <span>For You</span>
+            </span>
+          </a>
+        </li>
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <a class="nav-link" routerLink="/mapDisplay" (click)="collapseNavbar()">
             <span>
