feat: add link to GDPR in footer

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,4 @@
 <div class="footer">
+  <a href="../../../content/pdf/GDPR.pdf">Privacy Policy</a>
   <p>You are accessing an experimental web application developed by participants of the Team Project 2024 module.</p>
 </div>
