--- a/src/main/webapp/app/map-display/map-display.component.html
+++ b/src/main/webapp/app/map-display/map-display.component.html
@@ -1,21 +1,11 @@
 <head>
   <link rel="stylesheet" href="map-display.component.scss" />
 </head>
-<div class="divContainer">
-  <div class="mapMenuContainer">
-    <h2>Route</h2>
-    <form>
-      <div *ngFor="let stop of stops; let i = index">
-        <div>
-          <input class="routeInput" [(ngModel)]="stop.name" placeholder="Enter a stop" type="text" />
-        </div>
-      </div>
-      <input class="routeInput" type="submit" value="Submit" />
-      <button type="button" (click)="addStop()">Add a stop</button>
-      <button type="button" (click)="removeStop()">Remove last stop</button>
-    </form>
-  </div>
 
+<div class="divContainer">
+  <div class="routeMenuContainer">
+    <h2>Route Summary</h2>
+  </div>
   <div class="mapContainer">
     <div class="mapBorder">
       <div id="map"></div>
