Changed navbar colours and font colours, added a carousel slider for the homepage

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!--<div class="row">
   <div class="col-md-3">
     <span class="hipster img-fluid rounded"></span>
   </div>
@@ -51,4 +51,8 @@
       <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">GitHub</a>!
     </p>
   </div>
+</div>-->
+<div class="mySlides">
+  <jhi-carousel></jhi-carousel>
+  <div class="text">Caption Text</div>
 </div>
