Added the search-form for the homepage

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -53,6 +53,10 @@
   </div>
 </div>-->
 <div class="mySlides">
-  <jhi-carousel></jhi-carousel>
-  <div class="text">Caption Text</div>
+  <div class="adventurous"><h1>Choose your Adventure</h1></div>
+  <jhi-carousel><p>Caption Text</p></jhi-carousel>
+  <div class="text">
+    <h2>Customise a Tour</h2>
+  </div>
+  <jhi-search-form></jhi-search-form>
 </div>
