--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -22,15 +22,28 @@ Main page styles
     background-size: contain;
   }
 }*/
-/*
-.mySlides {
 
+.mySlides {
+}
+
+.text {
+  background-color: #000000;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
 }
-*/
+
+.adventurous {
+  background-color: #000000;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
