chore: change navbar icons and remove unused images

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -21,7 +21,7 @@
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <a class="nav-link" routerLink="/user-routes" (click)="collapseNavbar()">
             <span>
-              <fa-icon icon="map"></fa-icon>
+              <fa-icon icon="car"></fa-icon>
               <span>User Routes</span>
             </span>
           </a>
@@ -29,7 +29,7 @@
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <a class="nav-link" routerLink="/trending" (click)="collapseNavbar()">
             <span>
-              <fa-icon icon="sparkles"></fa-icon>
+              <fa-icon icon="line-chart"></fa-icon>
               <span>Trending</span>
             </span>
           </a>
@@ -37,7 +37,7 @@
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <a class="nav-link" routerLink="/for-you" (click)="collapseNavbar()">
             <span>
-              <fa-icon icon="map"></fa-icon>
+              <fa-icon icon="heart"></fa-icon>
               <span>For You</span>
             </span>
           </a>
@@ -53,7 +53,7 @@
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <a class="nav-link" routerLink="/rating" (click)="collapseNavbar()">
             <span>
-              <fa-icon icon="map"></fa-icon>
+              <fa-icon icon="star"></fa-icon>
               <span>Rating</span>
             </span>
           </a>
