--- a/src/main/webapp/app/user-routes/user-routes.component.html
+++ b/src/main/webapp/app/user-routes/user-routes.component.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-
     <link rel="stylesheet" href="user-routes.component.scss" />
   </head>
   <body>
     <div class="user-routes">
-      <div class="overlap-group"><img class="qaism-routes" src="img/qaism-routes.png" /></div>
+      <div class="overlap-group">
+        <div class="overlay-text">Qais M's Routes</div>
+      </div>
       <div class="text-wrapper">Recent</div>
       <img class="image" src="img/image-1.png" />
       <img class="img" src="img/image-2.png" />
