search: add sign in warning

--- a/src/main/webapp/app/search/search.component.html
+++ b/src/main/webapp/app/search/search.component.html
@@ -39,6 +39,7 @@
       --></div>
     </div>
     <div class="result">
+      <p style="color: red">NOTE: YOU MUST SIGN IN TO USE THIS FUNCTIONALITY (if only JHipster wasn't as tedious)</p>
       <p class="field">ID</p>
       <p class="field">Routes travelled</p>
       <p class="field">Reviews posted</p>
