--- a/src/main/webapp/app/map-display/map-display.component.html
+++ b/src/main/webapp/app/map-display/map-display.component.html
@@ -5,8 +5,9 @@
 <div class="divContainer">
   <div class="routeMenuContainer">
     <h2>Route Summary</h2>
-    <p *ngIf="summaryLoaded">Total time: {{ travelTime }}h</p>
-    <p *ngIf="summaryLoaded">Total distance: {{ travelDistance }}km</p>
+    <p *ngIf="routeFound">Total time: {{ travelTime }}h</p>
+    <p *ngIf="routeFound">Total distance: {{ travelDistance }}km</p>
+    <button [disabled]="!routeFound" type="button" (click)="clearAllWaypoints()">Clear all</button>
   </div>
   <div class="mapContainer">
     <div class="mapBorder">
