--- a/src/main/webapp/app/entities/review/list/review.component.html
+++ b/src/main/webapp/app/entities/review/list/review.component.html
@@ -68,6 +68,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="appUser.id">
+            <div class="d-flex">
+              <span>App User</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -81,6 +87,11 @@
           <td>{{ review.content }}</td>
           <td>{{ review.rating }}</td>
           <td>{{ review.reviewDate | formatMediumDate }}</td>
+          <td>
+            <div *ngIf="review.appUser">
+              <a [routerLink]="['/app-user', review.appUser.id, 'view']">{{ review.appUser.id }}</a>
+            </div>
+          </td>
           <td class="text-end">
             <div class="btn-group">
               <button type="submit" [routerLink]="['/review', review.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
