feat: changing create route ui

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -54,7 +54,7 @@
           <a class="nav-link" routerLink="/rating" (click)="collapseNavbar()">
             <span>
               <fa-icon icon="star"></fa-icon>
-              <span>Rating</span>
+              <span>Create Route</span>
             </span>
           </a>
         </li>
